2013-06-26  Werner Koch  <wk@gnupg.org>

	* gpgex.cc (get_lang_name): Rewrite using gettext.
	(start_help): Improve language detection.  Remove fallback to an
	external URL.
	* main.h (gpgex_server): Add root_dir.
	(utf8_to_wchar): Add prototype.
	* main.cc (gpgex_server::root_dir): New.
	(get_locale_dir): Pass then instance to GetModuleFileNameW.  Store
	the root dir.
	(utf8_to_wchar): New.
	(DllMain): Run i18n_init after debug_init.

2010-07-21  Werner Koch  <wk@g10code.com>

	* main.cc (DllMain): Add explicit init and deinit of libgpg-error.

2010-04-20  Marcus Brinkmann  <marcus@g10code.de>

	* client.cc (getinfo_pid_cb): Return gpg_error_t.
	(uiserver_connect): Port to new assuan interface.
	* main.cc (DllMain): Likewise.

2010-02-10  Marcus Brinkmann  <marcus@g10code.de>

	* gpgex.cc (gpgex_t::Initialize): Default to sign/encrypt if a
	file or directory name has no suffix.

2010-01-08  Marcus Brinkmann  <marcus@g10code.de>

	* icon-lock-12.bmp, icon-lock-16.bmp: Update.

2009-12-26  Marcus Brinkmann  <marcus@g10code.de>

	* icon-lock-12.bmp, icon-lock-16.bmp: New files.
	* Makefile.am (ICON_NAMES): Add lock.
	* icons.rc: Add lock icons.
	* gpgex.h (class gpgex_t): Use "Lock" icon instead of "Key".

2009-07-17  Marcus Brinkmann  <marcus@g10code.de>

	* gpgex.cc (start_help): Do not cripple the browser window.

2009-03-10  Marcus Brinkmann  <marcus@g10code.de>

	* client.h, client.cc, gpgex.cc: Change encrypt&sign to
	sign&encrypt everywhere (except in the protocol, of course).

2009-02-11  Marcus Brinkmann  <marcus@g10code.de>

	* bitmaps.cc (load_bitmap): Change minus to underscore.
	* icons.rc: Likewise in identifiers.

2008-09-01  Marcus Brinkmann  <marcus@g10code.com>

	* gpgex.cc (Initialize): Also pay attention to endings pem, p7m
	and p7s.

2008-03-26  Marcus Brinkmann  <marcus@g10code.de>

	* client.cc (default_uiserver_cmdline): Fall back to GPA if
	Kleopatra is not installed.

2008-02-19  Marcus Brinkmann  <marcus@g10code.de>
